gccida/g3/refers_to_regno_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1805:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v27) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1836:20: error: expected expression
if ( loc != ( rtx *)v5->fld ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1841:20: error: expected expression
if ( loc != ( rtx *)rtx->fld ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1865:40: error: expected expression
if ( ( _WORD)v7 != 49 && loc != ( rtx *)&v5[1] ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1867:12: error: expected ';' after expression
v5 = ( rtx)v5[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1876:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)v5->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1887:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v17) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1917:18: error: expected expression
for ( i = ( rtx *)v5 + v8; ; --i ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1946:14: error: expected expression
v22 = ( rtx *)*i + v21; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/rtlanal.c:1960:13: error: expected expression
if ( ( rtx *)v36 == --v22 ) 
            ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/refers_to_regno_p/src/obj/rtlanal.o] Error 1
